@@ -5,6 +5,7 @@ Changelog for Yancy
     [Added]
 
     - Added footer with Yancy version and link to Github
+    - Added `plugins` configuration to standalone app
 
 0.004     2017-12-05 14:50:02-06:00 America/Chicago
 
